fixed spacing a bit and am now a tad more happy.

--- a/ableton/abstract/_settings.scss
+++ b/ableton/abstract/_settings.scss
@@ -2,12 +2,12 @@
 $spacing-smaller: 0.5em;
 $spacing-small  : 1em;
 $spacing-normal : 1.5em;
-$spacing-large  : 2em;
+$spacing-large  : 2.0em;
 $spacing-larger : 2.5em;
 
 $font-smaller: 0.5rem;
-$font-small  : 1rem;
-$font-normal : 1.25rem;
+$font-small  : 0.75rem;
+$font-normal : 1.0rem;
 $font-large  : 2rem;
 $font-larger : 2.5rem;
 //all these values are super arbitrary as of now and I must work on getting good values.
